# ofcli

./: .bumpversion.cfg  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: ci.yml  publish.yml
examples/: op-chains.dot  op-resolved-metadata.json  swamid-fed.dot
src/ofcli/: __init__.py  __main__.py  api.py  app.py  cli.py  core.py  exceptions.py  fedtree.py  message.py  policy.py  trust_chain.py  trustchain.py  utils.py
src/ofcli/api/: __init__.py  config.py
src/ofcli/api/api_v1/: api.py  endpoints.py
src/oidcfed/: __main__.py  api.py  cli.py  message.py
tests/: conftest.py  test_api.py  test_utils.py  utils.py
tests/ofcli/: test_utils.py
