[metadata]
name = ofcli
version = 0.0.1
summary = helper CLI tool for OIDC federation exploration
description = helper tool for OIDC federation exploration
long_description = file: README.md
long_description_content_type = text/markdown

author = Diana Gudu
author_email = gudu@kit.edu

home_page = https://gitlab.geant.org/TI_Incubator/oidcfed/ofcli
project_urls =
    Bug Tracker = https://gitlab.geant.org/TI_Incubator/oidcfed/ofcli/issues

license = MIT 
license_files = [LICENSE]

classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Systems Administration
    Topic :: System :: Systems Administration :: Authentication/Directory  
    Topic :: Utilities

[options.entry_points]
console_scripts =
    ofcli = ofcli.__main__:main

[options]
install_requires =
    click
    click_logging
    requests
    cryptojwt
package_dir=
    =src
packages=find:

[bdist_wheel]
universal = 1
